@@ -6,6 +6,9 @@
 # Contributed by Nicolas Salles
 #
 # $Log$
+# Revision 1.1  2004/12/09 16:20:06  jimmyo
+# generic/uptime was re-classified as linux/uptime (SF#1074576).
+#
 # Revision 1.2  2004/09/10 21:27:07  jimmyo
 # "Downed" uptime plugin from auto to manual.
 #
