@@ -23,6 +23,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.27  2004/12/09 16:20:06  jimmyo
+# generic/uptime was re-classified as linux/uptime (SF#1074576).
+#
 # Revision 1.26  2004/11/26 13:36:00  jimmyo
 # Log updates of nonexisting fields better (SF#1073172).
 #
@@ -270,7 +273,7 @@ my $bad_procs = 0;
 my $uaddr;
 if ($do_fork)
 {
-# Set up socket
+    # Set up socket
     $uaddr =  sockaddr_un("$config->{rundir}/$serversocket");
     socket (Server, PF_UNIX, SOCK_STREAM, 0)     || die "socket: $!";
     unlink ("$config->{'rundir'}/$serversocket");
@@ -739,7 +742,6 @@ sub read_socket_single {
     return $res;
 }
 
-
 sub read_socket {
     my ($socket) = @_;
     my @array;
@@ -971,8 +973,6 @@ sub use_old_config
     logger ("Attempting to use old configuration for $domain -> $name.");
 }
 
-
-
 sub logger_open {
     my $dirname = shift;
 
@@ -1029,7 +1029,6 @@ sub sanitise_fieldname
 
     return $lname;
 }
-
 
 1;
 
