@@ -7,6 +7,7 @@ munin (work)
     Stransky) (SF#1072459).
   * Bugfix: munin-graph now logs an illegal STACK in the first field better
     (SF#1081903).
+  * Plugin: generic/uptime was re-classified as linux/uptime (SF#1074576).
 
 munin (1.1.7)
 
